--- a/force-app/main/default/layouts/Participant_Study_Enrollment__c-Participant Study Enrollment Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant_Study_Enrollment__c-Participant Study Enrollment Layout.layout-meta.xml
@@ -23,6 +23,14 @@
                 <behavior>Edit</behavior>
                 <field>Motivational_Message_Id__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>PI_Contact__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Participant_Contact__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
