--- a/force-app/main/default/aura/AbstractNavigation/AbstractNavigation.cmp
+++ b/force-app/main/default/aura/AbstractNavigation/AbstractNavigation.cmp
@@ -3,6 +3,8 @@
  -->
 
 <aura:component description="AbstractNavigation" extensible="true" abstract="true">
+    <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
+                  scripts="{!join(',', $Resource.rr_community_js)}" afterScriptsLoaded="{!c.doInit}"/>
 
     <!-- attributes: -->
     <aura:attribute name="menuItems" type="List" access="public"/>
@@ -12,7 +14,7 @@
     <aura:attribute name="scrollDirection" type="String" access="public" default="left"/>
 
     <!-- handlers: -->
-    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
     <aura:handler name="change" value="{!v.mode}" action="{!c.doChangeItemsList}"/>
     <aura:handler event="forceCommunity:routeChange" action="{!c.doCurrentPageChange}"/>
 
