--- a/force-app/main/default/aura/HomePageParticipant/HomePageParticipant.cmp
+++ b/force-app/main/default/aura/HomePageParticipant/HomePageParticipant.cmp
@@ -7,6 +7,7 @@
     <!-- attributes: -->
     <aura:attribute name="welcomeMessage" type="String"/>
     <aura:attribute name="pe" type="Object"/>
+    <aura:attribute name="state" type="String" description="ALUMNI, PROSPECT, REFERRAL, PARTICIPANT"/>
 
     <!-- handlers: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
@@ -26,7 +27,8 @@
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_4-of-12">
                     <div class="slds-grid slds-grid_vertical slds-gutters">
                         <div class="slds-col">
-                            <aura:if isTrue="{!!empty(v.pe.Study_Site__r.Clinical_Trial_Profile__r.Profile_Picture__c)}">
+                            <aura:if
+                                    isTrue="{!!empty(v.pe.Study_Site__r.Clinical_Trial_Profile__r.Profile_Picture__c)}">
                                 <div class="rr-white-panel hp-logo-panel">
                                     <img src="{!v.pe.Study_Site__r.Clinical_Trial_Profile__r.Profile_Picture__c}"/>
                                 </div>
@@ -40,23 +42,25 @@
                         <div class="slds-col">
                             <c:OpenTaskPreviewPanel/>
                         </div>
-                        <div class="slds-col">
-                            <c:UpcomingVisitsPreviewPanel/>
-                        </div>
+                        <aura:if isTrue="{!v.state != 'ALUMNI'}">
+                            <div class="slds-col">
+                                <c:UpcomingVisitsPreviewPanel/>
+                            </div>
+                        </aura:if>
                     </div>
                 </div>
                 <div class="slds-col slds-size_1-of-1 slds-medium-size_8-of-12">
-                    <c:ParticipantStatePanel/>
-                    <c:RRPanel>
-                        <aura:set attribute="header">My Results</aura:set>
-                        <img src="{!$Resource.tmpimages +'/myresults.JPG'}"/>
-                    </c:RRPanel>
+                    <aura:if isTrue="{!v.state != 'ALUMNI'}">
+                        <c:ParticipantStatePanel/>
+                        <c:RRPanel>
+                            <aura:set attribute="header">My Results</aura:set>
+                            <img src="{!$Resource.tmpimages +'/myresults.JPG'}"/>
+                        </c:RRPanel>
+                    </aura:if>
                     <c:ResourceDashboardCard/>
                 </div>
             </div>
         </aura:if>
         <div style="height: 30px"/>
-
     </div>
-
 </aura:component>
