--- a/force-app/main/default/aura/RRGoogleMap/RRGoogleMap.cmp
+++ b/force-app/main/default/aura/RRGoogleMap/RRGoogleMap.cmp
@@ -7,8 +7,14 @@
 
     <!--attributes-->
     <aura:attribute name="accounts" type="List"/>
+    <aura:attribute name="hasAddress" type="Boolean" access="private"/>
     <aura:attribute name="markers" type="Object[]" access="private"/>
 
-    <lightning:map mapMarkers="{!v.markers}" zoomLevel="10"/>
+    <aura:if isTrue="{!v.hasAddress}">
+        <lightning:map mapMarkers="{!v.markers}" zoomLevel="10"/>
+        <aura:set attribute="else">
+            <div class="inform-window">{!$Label.c.GMap_Not_Available}</div>
+        </aura:set>
+    </aura:if>
 
 </aura:component>
