--- a/force-app/main/default/aura/RRGoogleMap/RRGoogleMap.css
+++ b/force-app/main/default/aura/RRGoogleMap/RRGoogleMap.css
@@ -6,3 +6,15 @@
 .THIS .slds-coordinates{
     display: none;
 }
+
+.THIS.inform-window{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 665px;
+    height: 374px;
+    background-color: #D9D9D9;
+    color: #6b6b6b;
+    font-size: 20px;
+    text-align: center;
+}
