REF-177 & REF-198 My Patients

--- a/force-app/main/default/aura/FilterPanel/FilterPanel.css
+++ b/force-app/main/default/aura/FilterPanel/FilterPanel.css
@@ -150,3 +150,8 @@
         margin-top: 0;
     }
 }
+.THIS .show-more {
+    color: #297DFD!important;
+    margin-left: 14px;
+    font-size: 13px;
+}
