--- a/unpackaged/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
@@ -34,6 +34,18 @@
                 <behavior>Edit</behavior>
                 <field>Study_Site_Phone__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Study_Site_Email__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Site_Staff__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Study_Site_Type__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
