--- a/force-app/main/default/aura/MedicalRecordReviewLog/MedicalRecordReviewLog.css
+++ b/force-app/main/default/aura/MedicalRecordReviewLog/MedicalRecordReviewLog.css
@@ -1,7 +1,13 @@
 .THIS.mrrl-container {
-    padding-bottom: 100px;
+    padding-bottom: 30px;
 }
 
 .THIS.mrrl-container .mrrl-body .mrrl-body-list{
     min-height: 100px;
+}
+
+.THIS .mrri-header{
+    color:#999999;
+    font-size: 13px;
+    font-weight: 500;
 }
