--- a/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
+++ b/force-app/main/default/aura/SitesSearchItem/SitesSearchItem.cmp
@@ -21,7 +21,7 @@
                         {!v.studySiteWrapper.site.Name}
                 </div>
                 <div class="ssi-pi-name">
-                        {!$Label.c.PG_DBPI_Dr + ' ' + v.studySiteWrapper.site.Principal_Investigator__r.Name}
+                        {!v.studySiteWrapper.site.Principal_Investigator__r.Salutation + ' ' + v.studySiteWrapper.site.Principal_Investigator__r.Name}
                 </div>
             </div>
             <div class="slds-col slds-size--1-of-1 slds-medium-size--1-of-3">
