--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
@@ -188,8 +188,7 @@
                                 </div>
                                 <div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-12">
                                     <div class="site-sub-header site-distance">
-                                        {!siteWrapper.site.Is_Virtual_Study_Site__c ? 'Virtual' :
-                                        'Traditional'} Site
+                                        {!siteWrapper.siteType + 'Site'}
                                     </div>
                                     <div class="site-sub-header slds-m-topxx-small site-distance"><aura:unescapedHtml value="{!siteWrapper.formatedDistance}"/> </div>
                                 </div>
