--- a/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
+++ b/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
@@ -122,21 +122,25 @@
                             <div class="value">{!v.pe.Patient_ID__c}</div>
                         </div>
                         <div class="vpi-field">
-                            <div class="label">{!$Label.c.PE_Country}</div>
-                            <div class="value">{!v.pe.Participant__r.Mailing_Country__c}</div>
+                            <div class="label">{!$Label.c.PE_Patient_Phone_number}</div>
+                            <div class="value">{!v.pe.Participant__r.Phone__c}</div>
                         </div>
-                        <aura:if isTrue="{!!empty(v.pe.Participant__r.Mailing_State__c)}">
-                            <div class="vpi-field">
-                                <div class="label">{!$Label.c.PE_State}</div>
-                                <div class="value">{!v.pe.Participant__r.Mailing_State__c}</div>
-                            </div>
-                        </aura:if>
-                        <aura:if isTrue="{!!empty(v.pe.Participant__r.Mailing_Zip_Postal_Code__c)}">
-                            <div class="vpi-field">
-                                <div class="label">{!$Label.c.PG_AS_F_Zip_Postal_Code}</div>
-                                <div class="value">{!v.pe.Participant__r.Mailing_Zip_Postal_Code__c}</div>
-                            </div>
-                        </aura:if>
+<!--                        <div class="vpi-field">-->
+<!--                            <div class="label">{!$Label.c.PE_Country}</div>-->
+<!--                            <div class="value">{!v.pe.Participant__r.Mailing_Country__c}</div>-->
+<!--                        </div>-->
+<!--                        <aura:if isTrue="{!!empty(v.pe.Participant__r.Mailing_State__c)}">-->
+<!--                            <div class="vpi-field">-->
+<!--                                <div class="label">{!$Label.c.PE_State}</div>-->
+<!--                                <div class="value">{!v.pe.Participant__r.Mailing_State__c}</div>-->
+<!--                            </div>-->
+<!--                        </aura:if>-->
+<!--                        <aura:if isTrue="{!!empty(v.pe.Participant__r.Mailing_Zip_Postal_Code__c)}">-->
+<!--                            <div class="vpi-field">-->
+<!--                                <div class="label">{!$Label.c.PG_AS_F_Zip_Postal_Code}</div>-->
+<!--                                <div class="value">{!v.pe.Participant__r.Mailing_Zip_Postal_Code__c}</div>-->
+<!--                            </div>-->
+<!--                        </aura:if>-->
                     </aura:if>
 
                 </div>
