Refactoring CSS to resource detail.

--- a/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.css
+++ b/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.css
@@ -3,7 +3,7 @@
  */
 .THIS .resource-detail-block{
     width: 100%;
-    margin: 0 auto auto;
+    margin: 3% auto auto;
 }
 .THIS .resource-error-message {
     /*top: 20%;*/
